Bug 692605 - Regression: font issues starting with 0d472d and UFST
Summary: Regression: font issues starting with 0d472d and UFST
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Regression (show other bugs)
Version: master
Hardware: PC Linux
: P2 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-17 04:31 UTC by Marcos H. Woehrmann
Modified: 2011-10-26 15:56 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
tests__pdf__zero-length-font.pdf.pgmraw.300.1.page_1.png (7.28 KB, image/png)
2011-10-17 04:34 UTC, Marcos H. Woehrmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2011-10-17 04:31:28 UTC
Starting with 0d472d36958ba10ce3e5747f91776ad2d53530c7 several regressions have been introduced when using UFST.

I've attached a couple of examples, the image on the left is with 0d472d36958ba10ce3e5747f91776ad2d53530c7, the middle is before that commit, and the right is the difference.

Here is a partial list of files that have changed:

tests__pdf__zero-length-font.pdf
tests_private__ps__ps3cet__13-01.PS
tests_private__ps__ps3cet__13-20.PS
tests_private__ps__ps3cet__13-22.PS
tests_private__ps__ps3cet__13-27.PS
tests_private__ps__ps3cet__14-12.PS
tests_private__ps__ps3cet__14-14.PS
Comment 1 Marcos H. Woehrmann 2011-10-17 04:34:53 UTC
Created attachment 8013 [details]
tests__pdf__zero-length-font.pdf.pgmraw.300.1.page_1.png
Comment 3 Chris Liddell (chrisl) 2011-10-26 15:56:51 UTC
Fixed (I hope!) with:

http://git.ghostscript.com/?p=ghostpdl.git;a=commit;h=cf8815

We had some conflicting scaling requirements between what FAPI needs to work correctly, and what was require in the PS world for it to "accept" the Microtype fonts as analogues of the standard Type 1 fonts.